deploy/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: cloud-native-traffic
spec:
  selector:
    app: order-service
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: cloud-native-traffic
spec:
  selector:
    app: user-service
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: cloud-native-traffic
spec:
  selector:
    app: payment-service
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: cloud-native-traffic
spec:
  selector:
    app: inventory-service
  ports:
    - port: 5000
      targetPort: 5000
